# slopguard-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
sample-apps/: README.md
sample-apps/todolist/: pyproject.toml
sample-apps/todolist/tests/: test_todolist.py
sample-apps/todolist/todolist/: __init__.py  filter.py  store.py  todo.py
src/slopguard/: __init__.py  __main__.py  aggregator.py  cli.py  complexity.py  coverage_provider.py  crap.py  diranalyzer.py  errors.py  fileanalyzer.py  formatting.py  glob.py  models.py  progress.py  version.py
src/slopguard/coverage/: __init__.py  detection.py  index.py  pipeline.py  report.py  runner.py
tests/: test_aggregator.py  test_branches.py  test_cli.py  test_complexity.py  test_coverage.py  test_crap.py  test_diranalyzer.py  test_extra.py  test_formatting.py  test_glob.py  test_runner_integration.py
