[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slopguard-python"
version = "0.1.0"
description = "CRAP (Change Risk Anti-Patterns) guardrail for Python — score complex, undertested code in one number you can gate in CI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jeevan Thandi" }]
keywords = ["complexity", "coverage", "crap", "cognitive-complexity", "cyclomatic-complexity", "code-quality", "ci", "slopguard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
# Zero runtime dependencies — standard library only (ast, argparse, json).
# Coverage is gathered by driving the *target project's* own coverage.py, which
# lives in that project's environment (like `go test` or vitest), not here.
dependencies = []

[project.optional-dependencies]
# Tooling for developing slopguard-python itself (running its own tests under
# coverage, for the dogfood gate). The library needs none of this at runtime.
dev = ["coverage>=7.0"]

[project.urls]
Homepage = "https://slopguard.dev"
Repository = "https://github.com/JeevanThandi/slopguard-python"

[project.scripts]
slopguard-python = "slopguard.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
